同步P点网络包顺便重命名文件夹