@@ -34,7 +34,7 @@ public class MultiBlockAltar implements IMultiBlock {
 
     @Override
     public boolean isMatch(Level world, BlockPos posStart, Direction direction, StructureTemplate template) {
-        StructureTemplate.Palette palette = template.palettes.get(0);
+        StructureTemplate.Palette palette = template.palettes.getFirst();
         for (StructureTemplate.StructureBlockInfo blockInfo : palette.blocks()) {
             BlockState worldState = world.getBlockState(posStart.offset(blockInfo.pos()));
             BlockState infoState = blockInfo.state();
@@ -56,7 +56,7 @@ public class MultiBlockAltar implements IMultiBlock {
     public void build(Level worldIn, BlockPos posStart, Direction direction, StructureTemplate template) {
         PosListData posList = new PosListData();
         PosListData canPlaceItemPosList = new PosListData();
-        StructureTemplate.Palette palette = template.palettes.get(0);
+        StructureTemplate.Palette palette = template.palettes.getFirst();
 
         for (StructureTemplate.StructureBlockInfo blockInfo : palette.blocks()) {
             posList.add(posStart.offset(blockInfo.pos()));
